--- a/style.css
+++ b/style.css
@@ -13,13 +13,16 @@
             text-align: center;
         }
         #tn1{
-            width: 240px;
+            width: 260px;
             height: 40px; 
             border-radius: 15px;
             background-color: darkgoldenrod;
             text-align: right;           
             font-size: 20px;
             padding: 5px;
+            align-items: center;
+            margin: auto -60px;
+            
         }
         .botoesc{
             width: 60px;
@@ -35,7 +38,7 @@
             display: grid;
         grid-template-columns: repeat(4, 60px);
         grid-gap: 10px;
-        justify-content: center;     /* centraliza a grade horizontalmente */
+        justify-content: center;
         margin-top: 20px;
 
         }
